--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,3 +1,8 @@
+<!--
+ About Page, zeigt informationen über die Website & imaginär firma.
+ @author Stefan Crasninaec, Samuel Steinhart, Eric Fuchs
+ @version 11.05.2023
+ -->
 <!DOCTYPE html>
 <html lang="de">
   <head>
@@ -16,6 +21,7 @@
   </head>
 
   <body>
+  <!-- Navbar, mit ausfahrbaren elementen welche angeklickt werden -> funktionieren über animationen -->
     <header>
       <nav>
         <a href="../index.html" class="logo"><img src="../IMG/transparent_gadgexLogo.png" alt="Logo" height="30px"><h1>GADGEX</h1></a>
@@ -51,8 +57,11 @@
           </ul>
         </div>
 
+
         <div class="more">
+          <!-- searchbar, that works with js. Script serches for similar items to the items that were put in-->
           <div class="searchBox">
+            <!-- Liste der Produkte welche man finden kann -->
             <input id="search" onkeyup="search_item()" type="text" placeholder="Search.." />
             <ol id='list'>
               <li class="searchItem"><a class="sublink_item_search" href="phones.html#phone1">Apple IPhone 13</a></li>
@@ -75,6 +84,7 @@
             </ol>
           </div>
 
+          <!-- Burger Menu welches auf click durch eine CSS animation ausgefahren werden kann. Hier können links zu der Homepage, About Page, etc gefunden werden -->
           <div class="burger">
             <input id="menu__toggle" type="checkbox" />
             <label class="menu__btn" for="menu__toggle">
@@ -101,6 +111,7 @@
         </div>
       </nav>
     </header>
+  <!-- About Information -->
     <div class="aboutContent">
       <div class="aboutText">
         <h1>Welcome to Gadgex</h1>
