Shopping cart fertig

--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -109,9 +109,9 @@
         <div class="items">
           <div class="item title"><h2>MY SHOPPING CART</h2></div>
           <div class="item">
-            <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+            <img class="itemImage" src="../IMG/Phone2.jpg" alt="">
             <div class="information">
-              <h3>Amazing Item</h3>
+              <h3>IPhone 14</h3>
               <p>Produkt Number: XYZ</p>
               <p>Style: Whatever</p>
               <p>Color: Green</p>
@@ -126,9 +126,9 @@
             </div>
           </div>
           <div class="item">
-            <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+            <img class="itemImage" src="../IMG/Phone3.jpg" alt="">
             <div class="information">
-              <h3>Amazing Second Item</h3>
+              <h3>Google Pixel 7</h3>
               <p>Produkt Number: ABC</p>
               <p>Style: Ever</p>
               <p>Color: Yellow</p>
