--- a/HTML/laptops.html
+++ b/HTML/laptops.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webshop | Laptops</title>
+    <title>GADGEX | Laptops</title>
     <link rel="stylesheet" href="../CSS/main.css" />
     <link rel="stylesheet" href="../CSS/dropdown.css" />
     <link rel="stylesheet" href="../CSS/links-sublinks.css" />
