--- a/HTML/privacyPolicy.html
+++ b/HTML/privacyPolicy.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Webshop | Privacy Policy</title>
+  <title>GADGEX | Privacy Policy</title>
   <link rel="stylesheet" href="../CSS/dropdown.css"/>
   <link rel="stylesheet" href="../CSS/links-sublinks.css"/>
   <link rel="stylesheet" href="../CSS/main.css"/>
