id in filters added

--- a/HTML/laptops.html
+++ b/HTML/laptops.html
@@ -124,9 +124,9 @@
               <hr>
               <fieldset>
                 <legend>Prozessor</legend>
-                  <label><input type="checkbox" name="prozessor" checked>Intel</label>
-                  <label><input type="checkbox" name="prozessor" checked>AMD</label>
-                  <label><input type="checkbox" name="prozessor" checked>Apple</label>
+                  <label for="intel"><input id="intel" type="checkbox" name="prozessor" checked>Intel</label>
+                  <label for="amd"><input id="amd" type="checkbox" name="prozessor" checked>AMD</label>
+                  <label for="apple"><input id="apple" type="checkbox" name="prozessor" checked>Apple</label>
               </fieldset>
             </div>
             <hr>
@@ -134,18 +134,18 @@
               <!-- form required -->
               <fieldset>
                 <legend>Bildschirmgröße</legend>
-                <label><input type="checkbox" name="bildschirm" checked>13 Zoll</label>
-                <label><input type="checkbox" name="bildschirm" checked>15 Zoll</label>
-                <label><input type="checkbox" name="bildschirm" checked>16 Zoll</label>
+                <label for="13zoll"><input id="13zoll" type="checkbox" name="bildschirm" checked>13 Zoll</label>
+                <label for="15zoll"><input id="15zoll" type="checkbox" name="bildschirm" checked>15 Zoll</label>
+                <label for="16zoll"><input id="16zoll" type="checkbox" name="bildschirm" checked>16 Zoll</label>
               </fieldset>
             </div>
             <hr>
             <div>
               <fieldset>
                 <legend>Betriebssystem</legend>
-                <label><input type="checkbox" name="os" checked>MacOS</label>
-                <label><input type="checkbox" name="os" checked>Windows</label>
-                <label><input type="checkbox" name="os" checked>Linux</label>
+                <label for="macOs"><input id="macOs" type="checkbox" name="os" checked>MacOS</label>
+                <label for="windows"><input id="windows" type="checkbox" name="os" checked>Windows</label>
+                <label for="linux"><input id="linux" type="checkbox" name="os" checked>Linux</label>
               </fieldset>
               <hr>
             </div>
