--- a/HTML/phones.html
+++ b/HTML/phones.html
@@ -124,20 +124,20 @@
                 <!-- Farbfilter-->
                   <fieldset>
                     <legend>Gerätefarben</legend>
-                    <label>
-                      <input type="checkbox" name="color" style="accent-color: #b40404" checked>
+                    <label for="phoneRed">
+                      <input id="phoneRed" type="checkbox" name="color" style="accent-color: #b40404" checked>
                     </label>
-                    <label>
-                      <input type="checkbox" name="color" style="accent-color: #1627d7" checked>
+                    <label for="phoneBlue">
+                      <input id="phoneBlue" type="checkbox" name="color" style="accent-color: #1627d7" checked>
                     </label>
-                    <label>
-                      <input type="checkbox" name="color" style="accent-color: #046917" checked>
+                    <label for="phoneGreen">
+                      <input id="phoneGreen" type="checkbox" name="color" style="accent-color: #046917" checked>
                     </label>
-                    <label>
-                      <input type="checkbox" name="color" style="accent-color: #181818" checked>
+                    <label for="phoneBlack">
+                      <input id="phoneBlack" type="checkbox" name="color" style="accent-color: #181818" checked>
                     </label>
-                    <label>
-                      <input type="checkbox" name="color" style="accent-color: #e1e1e1" checked>
+                    <label for="phoneWhite">
+                      <input id="phoneWhite" type="checkbox" name="color" style="accent-color: #e1e1e1" checked>
                     </label>
                   </fieldset>
               </div>
@@ -146,9 +146,9 @@
                 <!-- Speicherfilter -->
                 <fieldset>
                   <legend>Speicherkapazität</legend>
-                  <label><input type="checkbox" name="speicher" checked>256 GB</label>
-                  <label><input type="checkbox" name="speicher" checked>512 GB</label>
-                  <label><input type="checkbox" name="speicher" checked>1 TB</label>
+                  <label for="phone256"><input id="phone256" type="checkbox" name="speicher" checked>256 GB</label>
+                  <label for="phone512"><input id="phone512" type="checkbox" name="speicher" checked>512 GB</label>
+                  <label for="phone1tb"><input id="phone1tb" type="checkbox" name="speicher" checked>1 TB</label>
                 </fieldset>
               </div>
               <hr>
@@ -156,9 +156,9 @@
                 <!--Betriebssystem-->
                 <fieldset>
                   <legend>Betriebssystem</legend>
-                  <label><input type="checkbox" name="marke" checked>IOS</label>
-                  <label><input type="checkbox" name="marke" checked>Android</label>
-                  <label><input type="checkbox" name="marke" checked>Andere</label>
+                  <label for="phoneIOS"><input id="phoneIOS" type="checkbox" name="marke" checked>IOS</label>
+                  <label for="phoneAndroid"><input id="phoneAndroid" type="checkbox" name="marke" checked>Android</label>
+                  <label for="phoneAndere"><input id="phoneAndere" type="checkbox" name="marke" checked>Andere</label>
                 </fieldset>
                 <hr>
               </div>
