--- a/HTML/tablets.html
+++ b/HTML/tablets.html
@@ -123,20 +123,20 @@
               <!-- Farbfilter -->
               <fieldset>
                 <legend>Gerätefarben</legend>
-                <label>
-                  <input type="checkbox" name="color" style="accent-color: #b40404" checked>
+                <label for="tabletRed">
+                  <input id="tabletRed" type="checkbox" name="color" style="accent-color: #b40404" checked>
                 </label>
-                <label>
-                  <input type="checkbox" name="color" style="accent-color: #1627d7" checked>
+                <label for="tabletBlue">
+                  <input id="tabletBlue" type="checkbox" name="color" style="accent-color: #1627d7" checked>
                 </label>
-                <label>
-                  <input type="checkbox" name="color" style="accent-color: #046917" checked>
+                <label for="tabletGreen">
+                  <input id="tabletGreen" type="checkbox" name="color" style="accent-color: #046917" checked>
                 </label>
-                <label>
-                  <input type="checkbox" name="color" style="accent-color: #181818" checked>
+                <label for="tabletBlack">
+                  <input id="tabletBlack" type="checkbox" name="color" style="accent-color: #181818" checked>
                 </label>
-                <label>
-                  <input type="checkbox" name="color" style="accent-color: #e1e1e1" checked>
+                <label for="tabletWhite">
+                  <input id="tabletWhite" type="checkbox" name="color" style="accent-color: #e1e1e1" checked>
                 </label>
               </fieldset>
             </div>
@@ -145,9 +145,9 @@
               <!-- Speicherfilter -->
               <fieldset>
                 <legend>Speicherkapazität</legend>
-                <label><input type="checkbox" name="speicher" checked>256 GB</label>
-                <label><input type="checkbox" name="speicher" checked>512 GB</label>
-                <label><input type="checkbox" name="speicher" checked>1 TB</label>
+                <label for="tablet256"><input id="tablet256" type="checkbox" name="speicher" checked>256 GB</label>
+                <label for="tablet512"><input id="tablet512" type="checkbox" name="speicher" checked>512 GB</label>
+                <label for="tablet1tb"><input id="tablet1tb" type="checkbox" name="speicher" checked>1 TB</label>
               </fieldset>
             </div>
             <hr>
@@ -155,9 +155,9 @@
               <!-- Betriebssystem - Filter -->
               <fieldset>
                 <legend>Betriebssystem</legend>
-                <label><input type="checkbox" name="marke" checked>IOS</label>
-                <label><input type="checkbox" name="marke" checked>Android</label>
-                <label><input type="checkbox" name="marke" checked>Andere</label>
+                <label for="tabletIos"><input id="tabletIos" type="checkbox" name="marke" checked>IOS</label>
+                <label for="tabletAndroid"><input id="tabletAndroid" type="checkbox" name="marke" checked>Android</label>
+                <label for="tabletAndere"><input id="tabletAndere" type="checkbox" name="marke" checked>Andere</label>
               </fieldset>
               <hr>
             </div>
