--- a/HTML/register.html
+++ b/HTML/register.html
@@ -18,7 +18,7 @@
 
       <h1 id="login-header">Register</h1>
 
-      <!-- Registrierungs-Daten -->>
+      <!-- Registrierungs-Daten -->
       <form id="login-form">
         <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
         <input type="email" name="password" id="email-field" class="login-form-field" placeholder="Email">
