--- a/HTML/login.html
+++ b/HTML/login.html
@@ -26,7 +26,7 @@
         <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
         <input type="submit" value="Login" id="login-form-submit">
       </form>
-      <!-- Error msg falls die Eingabe Falsch ist-->
+      <!-- Error msg falls die Eingabe Falsch ist-
       <div id="login-error-msg-holder">
         <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
       </div>
